implementing Strabon system adapter